begin to add elements to html pages

--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -1,3 +1,55 @@
 @{
     Layout="_Layout";
 }
+<div class="header">
+    <div class="title">
+        <h1>Title</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+
+    </div>
+    <div class="col-md-2">
+        <a href="#"><div class="well">
+            <h1>Lorem</h1>
+        </div></a>
+    </div>
+    <div class="col-md-2">
+        <a href="#"><div class="well">
+            <h1>Lorem</h1>
+        </div></a>
+    </div>
+    <div class="col-md-2">
+        <a href="#"><div class="well">
+            <h1>Lorem</h1>
+        </div></a>
+    </div>
+    <div class="col-md-3">
+        
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+
+    </div>
+  
+    <div class="col-md-2">
+        <a href="#"><div class="well">
+            <h1>Ipsum</h1>
+        </div></a>
+    </div>
+    <div class="col-md-2">
+        <a href="#"><div class="well">
+            <h1>Ipsum</h1>
+        </div></a>
+    </div>
+    <div class="col-md-2">
+        <a href="#"><div class="well">
+            <h1>Ipsum</h1>
+        </div></a>
+    </div>
+    <div class="col-md-3">
+        
+    </div>
+</div>
