--- a/InventoryTracker/Views/Dishes/Show.cshtml
+++ b/InventoryTracker/Views/Dishes/Show.cshtml
@@ -2,6 +2,29 @@
 @{
     Layout="_Layout";
 }
-<div class="header">
-    <h1 class="title">Show Dish</h1>
+
+<div class="row">
+    <div class="col-md-12">
+      <a href="#"><div class="well long">
+          <h1>Lorem ipsum sit dolor</h1>
+      </div></a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <div class="well stacked">
+            <h1>Lorem</h1>
+        </div>
+        <div class="well stacked">
+            <h1>ipsum</h1>
+        </div>
+        <div class="well stacked">
+            <h1>sit</h1>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <div class="well big">
+            <h1>Lorem ipsum sit dolor</h1>
+        </div>
+    </div>
 </div>
