--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -2,11 +2,11 @@
     Layout="_Layout";
 }
 <div class="header">
-    <div class="title">
-        <h1>Title</h1>
+    <div>
+        <h1 class="title"><em>FastTracker</em></h1>
     </div>
 </div>
-<div class="row">
+<div class="row topRow">
     <div class="col-md-3">
 
     </div>
