add container and id to each cshtml page to help with layout of info on actual website

--- a/InventoryTracker/Views/Dishes/Edit.cshtml
+++ b/InventoryTracker/Views/Dishes/Edit.cshtml
@@ -5,9 +5,11 @@
 <div class="header">
     <h1 class="title">Edit Dish</h1>
 </div>
-<div class="row">
+<div id="one" class=container>
+  <div class="row">
 
-</div>
-<div class="row">
-    
+  </div>
+  <div class="row">
+
+  </div>
 </div>
