--- a/InventoryTracker/Views/Dishes/Index.cshtml
+++ b/InventoryTracker/Views/Dishes/Index.cshtml
@@ -5,9 +5,9 @@
 <div class="header">
     <h1 class="title">Dishes Index</h1>
 </div>
-<div class="row">
-
-</div>
-<div class="row">
-    
+<div id="two" class="container">
+  <div class="row">
+  </div>
+  <div class="row">
+  </div>
 </div>
