--- a/InventoryTracker/Views/Ingredients/Index.cshtml
+++ b/InventoryTracker/Views/Ingredients/Index.cshtml
@@ -5,9 +5,11 @@
 <div class="header">
     <h1 class="title"></h1>
 </div>
-<div class="row">
+<div id="seven" class="container">
+  <div class="row">
 
-</div>
-<div class="row">
+  </div>
+  <div class="row">
 
+  </div>
 </div>
