--- a/InventoryTracker/Views/Dishes/New.cshtml
+++ b/InventoryTracker/Views/Dishes/New.cshtml
@@ -5,9 +5,11 @@
 <div class="header">
     <h1 class="title">New Dish</h1>
 </div>
-<div class="row">
+<div id="three" class="container">
+  <div class="row">
 
-</div>
-<div class="row">
-    
+  </div>
+  <div class="row">
+
+  </div>
 </div>
