--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -6,50 +6,52 @@
         <h1 class="title"><em>FastTracker</em></h1>
     </div>
 </div>
-<div class="row topRow">
-    <div class="col-md-3">
+<div id="five" class="container">
+  <div class="row topRow">
+      <div class="col-md-3">
 
-    </div>
-    <div class="col-md-2">
-        <a href="#"><div class="well">
-            <h1>Lorem</h1>
-        </div></a>
-    </div>
-    <div class="col-md-2">
-        <a href="#"><div class="well">
-            <h1>Lorem</h1>
-        </div></a>
-    </div>
-    <div class="col-md-2">
-        <a href="#"><div class="well">
-            <h1>Lorem</h1>
-        </div></a>
-    </div>
-    <div class="col-md-3">
-        
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-3">
+      </div>
+      <div class="col-md-2">
+          <a href="#"><div class="well">
+              <h1>Lorem</h1>
+          </div></a>
+      </div>
+      <div class="col-md-2">
+          <a href="#"><div class="well">
+              <h1>Lorem</h1>
+          </div></a>
+      </div>
+      <div class="col-md-2">
+          <a href="#"><div class="well">
+              <h1>Lorem</h1>
+          </div></a>
+      </div>
+      <div class="col-md-3">
 
-    </div>
-  
-    <div class="col-md-2">
-        <a href="#"><div class="well">
-            <h1>Ipsum</h1>
-        </div></a>
-    </div>
-    <div class="col-md-2">
-        <a href="#"><div class="well">
-            <h1>Ipsum</h1>
-        </div></a>
-    </div>
-    <div class="col-md-2">
-        <a href="#"><div class="well">
-            <h1>Ipsum</h1>
-        </div></a>
-    </div>
-    <div class="col-md-3">
-        
-    </div>
+      </div>
+  </div>
+  <div class="row">
+      <div class="col-md-3">
+
+      </div>
+
+      <div class="col-md-2">
+          <a href="#"><div class="well">
+              <h1>Ipsum</h1>
+          </div></a>
+      </div>
+      <div class="col-md-2">
+          <a href="#"><div class="well">
+              <h1>Ipsum</h1>
+          </div></a>
+      </div>
+      <div class="col-md-2">
+          <a href="#"><div class="well">
+              <h1>Ipsum</h1>
+          </div></a>
+      </div>
+      <div class="col-md-3">
+
+      </div>
+  </div>
 </div>
