--- a/InventoryTracker/Views/Shipments/Edit.cshtml
+++ b/InventoryTracker/Views/Shipments/Edit.cshtml
@@ -5,9 +5,11 @@
 <div class="header">
     <h1 class="title">Edit Shipment</h1>
 </div>
-<div class="row">
+<div id="fourteen" class="container">
+  <div class="row">
 
-</div>
-<div class="row">
+  </div>
+  <div class="row">
 
+  </div>
 </div>
