--- a/InventoryTracker/Views/Shipments/Index.cshtml
+++ b/InventoryTracker/Views/Shipments/Index.cshtml
@@ -5,9 +5,11 @@
 <div class="header">
     <h1 class="title">Shipment Index</h1>
 </div>
-<div class="row">
+<div id="fifteen" class="container">
+  <div class="row">
 
-</div>
-<div class="row">
+  </div>
+  <div class="row">
 
+  </div>
 </div>
