edit Home controller and TableOrder controller, fill in TableOrder views

--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
           </div></a>
       </div>
       <div class="col-md-2">
-          <a href="#"><div class="well">
-              <h1>Lorem</h1>
+          <a href="/orders"><div class="well">
+              <h1>Orders</h1>
           </div></a>
       </div>
       <div class="col-md-2">
