update TableOrderController methods, TableOrderView

--- a/InventoryTracker/Views/TableOrders/New.cshtml
+++ b/InventoryTracker/Views/TableOrders/New.cshtml
@@ -11,7 +11,7 @@
     <label for="tableNumber">Table Number</label>
     <input id="tableNumber" name="tableNumber" type="text" required>
     <label for="orderDate">Date</label>
-    <input id="orderDate" name="orderDate" type="date" required value=@DateTime.Now>
+    <input id="orderDate" name="orderDate" type="date" required value="@DateTime.Now">
     <button type="submit">New</button>
   </form>
 </div>
