add controller for shipments and some data for the page

--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -12,8 +12,8 @@
 
       </div>
       <div class="col-md-2">
-          <a href="#"><div class="well">
-              <h1>Lorem</h1>
+          <a href="/ingredients"><div class="well">
+              <h1>Ingredients</h1>
           </div></a>
       </div>
       <div class="col-md-2">
@@ -22,8 +22,8 @@
           </div></a>
       </div>
       <div class="col-md-2">
-          <a href="#"><div class="well">
-              <h1>Lorem</h1>
+          <a href="/shipments"><div class="well">
+              <h1>Shipments</h1>
           </div></a>
       </div>
       <div class="col-md-3">
