--- a/InventoryTracker/Views/Shipments/Index.cshtml
+++ b/InventoryTracker/Views/Shipments/Index.cshtml
@@ -7,7 +7,7 @@
 </div>
 <div id="fifteen" class="container">
   <div class="row">
-
+    <p><a href="/shipments/new">Recieve a new shipment</a></p>
   </div>
   <div class="row">
 
