--- a/InventoryTracker/Views/Shipments/New.cshtml
+++ b/InventoryTracker/Views/Shipments/New.cshtml
@@ -7,6 +7,12 @@
 </div>
 <div id="sixteen" class="container">
   <div class="row">
+    <form action="/shipments/create" method="post">
+      <label for="date">Date Recieved</label>
+      <input for="date" id="date" type="date" value="DateTime.Now">
+
+      <button type="submit">Recieve</button>
+    </form>
 
   </div>
   <div class="row">
