--- a/InventoryTracker/Views/Dishes/Index.cshtml
+++ b/InventoryTracker/Views/Dishes/Index.cshtml
@@ -7,7 +7,20 @@
 </div>
 <div id="two" class="container">
   <div class="row">
+  
+  @if(Model.Count == 0)
+  {
+    <p>No orders</p>
+  }
+  @if(Model.Count != 0)
+  {
+    @foreach(Dish dish in Model)
+    {
+      <p><a href="/dishes/@dish.GetId()">@dish.GetName()</a></p>
+    }
+  }
   </div>
   <div class="row">
+    <p><a href="/dishes/new">New dish<a></p>
   </div>
 </div>
