--- a/InventoryTracker/Views/Dishes/New.cshtml
+++ b/InventoryTracker/Views/Dishes/New.cshtml
@@ -7,7 +7,11 @@
 </div>
 <div id="three" class="container">
   <div class="row">
-
+    <form action"/dishes/new" method="post">
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text" required>
+      <button type="submit">New</button>
+    </form>
   </div>
   <div class="row">
 
