--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -36,8 +36,8 @@
       </div>
 
       <div class="col-md-2">
-          <a href="#"><div class="well">
-              <h1>Ipsum</h1>
+          <a href="/dishes"><div class="well">
+              <h1>Dishes</h1>
           </div></a>
       </div>
       <div class="col-md-2">
