--- a/InventoryTracker/Views/TableOrders/New.cshtml
+++ b/InventoryTracker/Views/TableOrders/New.cshtml
@@ -7,7 +7,7 @@
     <h1 class="title">New Order</h1>
 </div>
 <div id="twelve" class="container">
-  <form action"/orders/new" method="post">
+  <form action"/orders" method="post">
     <label for="tableNumber">Table Number</label>
     <input id="tableNumber" name="tableNumber" type="text" required>
     <label for="orderDate">Date</label>
