--- a/InventoryTracker/Views/TableOrders/Edit.cshtml
+++ b/InventoryTracker/Views/TableOrders/Edit.cshtml
@@ -7,7 +7,14 @@
 </div>
 <div id="ten" class="container">
   <div class="row">
-
+  <form action="/orders/@Model.GetId()" method="post">
+    <label for="tableNumber"></label>
+    <input id="tableNumber" name="tableNumber" type="text" required value="@Model.GetTableNumber()">
+    <label for="orderDate"></label>
+    <input id="orderDate" name="orderDate" type="date" required value="@Model.GetOrderDate()">
+    <br>
+    <button type="submit">Save</button>
+  </form>
   </div>
   <div class="row">
 
