add GetPotentialIngredients method to Dish class, update view

--- a/InventoryTracker/Views/Dishes/New.cshtml
+++ b/InventoryTracker/Views/Dishes/New.cshtml
@@ -7,7 +7,7 @@
 </div>
 <div id="three" class="container">
   <div class="row">
-    <form action"/dishes" method="post">
+    <form action="/dishes" method="post">
       <label for="name">Name</label>
       <input id="name" name="name" type="text" required>
       <button type="submit">New</button>
