--- a/InventoryTracker/Views/Dishes/Show.cshtml
+++ b/InventoryTracker/Views/Dishes/Show.cshtml
@@ -17,20 +17,27 @@
       <div class="col-md-4">
           <div class="well stacked">
               <h1>Lorem</h1>
-              <form action="/dishes/@Model["dish"].GetId()/ingredients" method="post">
-                    
-                    <label for="ingredientId">Add ingredient</label>
-                    <select id="ingredientId" name="ingredientId">
-                        @foreach(Ingredient ingredient in Model["all_ingredients"])
-                        {
-                            <option value="@ingredient.GetId()">@ingredient.GetName()</option>
-                        }
-                    </select>
-                    <label for="quantity">Quantity</label>
-                    <input id="quantity" name="quantity" type="number" value="1" required>
-                    
-                    <button type="submit">Add</button>
+              @if(Model["all_ingredients"].Count == 0)
+              {
+                <p>All ingredients are added</p>
+              }
+              @if(Model["all_ingredients"].Count != 0)
+              {
+                <form action="/dishes/@Model["dish"].GetId()/ingredients" method="post">
+
+                      <label for="ingredientId">Add ingredient</label>
+                      <select id="ingredientId" name="ingredientId">
+                          @foreach(Ingredient ingredient in Model["all_ingredients"])
+                          {
+                              <option value="@ingredient.GetId()">@ingredient.GetName()</option>
+                          }
+                      </select>
+                      <label for="quantity">Quantity</label>
+                      <input id="quantity" name="quantity" type="number" value="1" required>
+
+                      <button type="submit">Add</button>
                 </form>
+              }
           </div>
           <div class="well stacked">
               <h1>ipsum</h1>
@@ -42,7 +49,7 @@
       <div class="col-md-8">
           <div class="well big">
               <h1>Lorem ipsum sit dolor</h1>
-              
+
 
                 @if(Model["dish_ingredients"].Count == 0)
                 {
@@ -61,12 +68,12 @@
                             <button type="submit">Edit quantity</button>
                         </form>
                         <form action="/dishes/@Model["dish"].GetId()/ingredients/@ingredient.GetIngredient().GetId()/delete" method="post">
-                            
+
                             <button type="submit">Delete</button>
                         </form>
                     }
-                }          
+                }
           </div>
       </div>
   </div>
-</div>  
+</div>
