--- a/InventoryTracker/Views/TableOrders/Show.cshtml
+++ b/InventoryTracker/Views/TableOrders/Show.cshtml
@@ -4,9 +4,9 @@
 }
 <div id="thirteen" class="container">
   <div class="row">
-      <div class="col-md-12">       
+      <div class="col-md-12">
         <div class="well long">
-            <h1>@Model["order"].GetTableNumber() @Model["order"].GetOrderDate()</h1>
+            <h1>Table number @Model["order"].GetTableNumber() @Model["order"].GetOrderDate()</h1>
         </div>
         <form action="/orders/@Model["order"].GetId()/edit">
             <button>Edit</button>
@@ -28,9 +28,14 @@
       <div class="col-md-8">
             <div class="well big">
                 <h1>Lorem ipsum sit dolor</h1>
+                @if(Model["all_dishes"].Count == 0)
+                {
+                  <p>All dishes are in the order.</p>
+                }
+                @if(Model["all_dishes"].Count != 0)
+                {
+                  <form action="/orders/@Model["order"].GetId()/dishes" method="post">
 
-                <form action="/orders/@Model["order"].GetId()/dishes" method="post">
-                    
                     <label for="dishId">Add dish</label>
                     <select id="dishId" name="dishId">
                         @foreach(Dish dish in Model["all_dishes"])
@@ -40,9 +45,10 @@
                     </select>
                     <label for="newDishQuantity">Quantity</label>
                     <input id="newDishQuantity" name="newDishQuantity" type="number" value="1" required>
-                    
+
                     <button type="submit">Add</button>
-                </form>
+                  </form>
+                }
 
                 @if(Model["order_dishes"].Count == 0)
                 {
@@ -61,14 +67,14 @@
                             <button type="submit">Edit quantity</button>
                         </form>
                         <form action="/orders/@Model["order"].GetId()/dishes/@dish.GetDish().GetId()/delete" method="post">
-                            
+
                             <button type="submit">Delete</button>
                         </form>
                     }
-                }             
+                }
           </div>
       </div>
   </div>
     <p><a href="/orders">Back to Orders</a></p>
     <p><a href="/">Back to Home page</a></p>
-</div>   
+</div>
