--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -8,50 +8,24 @@
 </div>
 <div id="five" class="container">
   <div class="row topRow">
-      <div class="col-md-3">
-
+      <div class="col-md-1">
       </div>
       <div class="col-md-2">
-          <a href="/ingredients"><div class="well">
+          <a href="/ingredients"><div class="well link">
               <h3>Ingredients</h3>
           </div></a>
-      </div>
-      <div class="col-md-2">
-          <a href="/orders"><div class="well">
+          <a href="/orders"><div class="well link">
               <h3>Orders</h3>
           </div></a>
-      </div>
-      <div class="col-md-2">
-          <a href="/shipments"><div class="well">
+          <a href="/shipments"><div class="well link">
               <h3>Shipments</h3>
           </div></a>
-      </div>
-      <div class="col-md-3">
-
-      </div>
-  </div>
-  <div class="row">
-      <div class="col-md-3">
-
-      </div>
-
-      <div class="col-md-2">
-          <a href="/dishes"><div class="well">
+          <a href="/dishes"><div class="well link">
               <h3>Dishes</h3>
           </div></a>
       </div>
-      <div class="col-md-2">
-          <a href="#"><div class="well">
-              <h3>Ipsum</h3>
-          </div></a>
-      </div>
-      <div class="col-md-2">
-          <a href="#"><div class="well">
-              <h3>Ipsum</h3>
-          </div></a>
-      </div>
-      <div class="col-md-3">
-
+      <div class="col-md-9">
+          <!-- <img id="img-front" src="~/img/frontpage.jpg"> -->
       </div>
   </div>
 </div>
