--- a/InventoryTracker/Views/Shipments/New.cshtml
+++ b/InventoryTracker/Views/Shipments/New.cshtml
@@ -9,7 +9,7 @@
   <div class="row">
     <form action="/shipments/create" method="post">
       <label for="date">Date Recieved</label>
-      <input for="date" id="date" type="date" value="DateTime.Now">
+      <input name="date" id="date" type="date">
 
       <button type="submit">Recieve</button>
     </form>
