--- a/InventoryTracker/Views/Shipments/Index.cshtml
+++ b/InventoryTracker/Views/Shipments/Index.cshtml
@@ -7,7 +7,7 @@
 </div>
 <div id="fifteen" class="container">
   <div class="row">
-    <p><a href="/shipments/new">Recieve a new shipment</a></p>
+    <p><a href="/shipments/new">Add a new shipment</a></p>
   </div>
   <div class="row">
     <div class="col-md-3">
@@ -18,6 +18,7 @@
     </div>
     <div class="col-md-9">
       <a class="btn btn-info" href="/">Home</a>
+      <a class="btn btn-info" href="/ingredients">Show Inventory</a>
     </div>
     
   </div>
