--- a/InventoryTracker/Views/Shipments/Show.cshtml
+++ b/InventoryTracker/Views/Shipments/Show.cshtml
@@ -11,7 +11,7 @@
       </div>
       <div class="col-md-10">
         <div class="well long">
-            <h1>Shipment @Model["shipment"].GetId() Recieved @Model["shipment"].GetDate()</h1>
+            <h1>Shipment @Model["shipment"].GetId() Recieved @Model["shipment"].GetDate().ToShortDateString()</h1>
         </div>
       </div>
   </div>
