--- a/InventoryTracker/Views/Home/Index.cshtml
+++ b/InventoryTracker/Views/Home/Index.cshtml
@@ -8,24 +8,8 @@
 </div>
 <div id="five" class="container">
   <div class="row topRow">
-      <div class="col-md-1">
-      </div>
-      <div class="col-md-2">
-          <a href="/ingredients"><div class="well link">
-              <h3>Ingredients</h3>
-          </div></a>
-          <a href="/orders"><div class="well link">
-              <h3>Orders</h3>
-          </div></a>
-          <a href="/shipments"><div class="well link">
-              <h3>Shipments</h3>
-          </div></a>
-          <a href="/dishes"><div class="well link">
-              <h3>Dishes</h3>
-          </div></a>
-      </div>
       <div class="col-md-9">
-          <!-- <img id="img-front" src="~/img/frontpage.jpg"> -->
+          <img id="img-front" src="~/img/frontpage.jpg">
       </div>
   </div>
 </div>
