--- a/InventoryTracker/Views/Shared/_Layout.cshtml
+++ b/InventoryTracker/Views/Shared/_Layout.cshtml
@@ -28,7 +28,9 @@
                       <h4>Dishes</h4>
                   </div></a>
                 </div>
-                <div class="col-md-11">
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-10">
                   @RenderBody()
                 </div>
             </div>
