--- a/InventoryTracker/Views/Ingredients/New.cshtml
+++ b/InventoryTracker/Views/Ingredients/New.cshtml
@@ -7,7 +7,15 @@
 </div>
 <div id="eight" class="container">
   <div class="row">
-
+    <form action="/ingredients" method="post">
+      <label for="name">Ingredient Name:</label>
+      <input id="name" name="name">
+      <br>
+      <br>
+      <label for="quantity">Quantity:</label>
+      <input id="quantity" name="quantity">
+      <button type="submit">Add</button>
+    </form>
   </div>
   <div class="row">
 
