edit SQL statements to update ingredients quantity in ingredients table

--- a/InventoryTracker/Views/Shipments/New.cshtml
+++ b/InventoryTracker/Views/Shipments/New.cshtml
@@ -9,7 +9,7 @@
   <div class="row">
     <form action="/shipments/create" method="post">
       <label for="date">Date Recieved</label>
-      <input name="date" id="date" type="date">
+      <input name="date" id="date" type="datetime-local">
 
       <button type="submit">Recieve</button>
     </form>
