add delete buttons and routs to Dishes and TableOrder views and controllers

--- a/InventoryTracker/Views/Dishes/Show.cshtml
+++ b/InventoryTracker/Views/Dishes/Show.cshtml
@@ -11,6 +11,9 @@
         <form action="/dishes/@Model["dish"].GetId()/edit">
             <button>Edit</button>
         </form>
+        <form action="/dishes/@Model["dish"].GetId()/delete" method="post">
+            <button type="submit">Delete</button>
+        </form>
       </div>
   </div>
   <div class="row">
